# cc-maya-shellmod

./: .gitignore  README.md
icons/: bin2c.txt  out_shellMod.xmp  shellModNode.xmp  shellModNode_Add.xmp  shellModNode_Apply.xmp  shellModNode_CCLogo.xmp  shellModNode_Minus.xmp  shellModNode_Plane.xmp  shellModNode_Plus.xmp  shellModNode_Preset.xmp  shellModNode_Refresh.xmp  shellModNode_Trash.xmp
make/: CMakeLists.txt  build_linux.sh  build_osx.sh  build_win.ps1
make/src/: AETemplate.h  CMakeLists.txt  DagUtils.cpp  DagUtils.h  ShellModCommand.cpp  ShellModCommand.h  ShellModNode.cpp  ShellModNode.h  Utils.h  icons.h  icons_repo.h  pluginMain.cpp
mel/: AEshellModNodeTemplate.mel
presets/: Abstract_01.smp  Architectual_01.smp  Architectual_02.smp  Architectual_03.smp  Architectual_04.smp  Architectual_05.smp  Bolt_01.smp  Bolt_02.smp  ChaserEdge_01_percent.smp  ChaserEdge_02_percent.smp  ChaserEdge_05_percent.smp  ChaserEdge_10_percent.smp  ChaserEdge_20_percent.smp  ChaserEdge_30_percent.smp  Default.smp  Pattern_001.smp  Pattern_002.smp  Pottery_01.smp  Rim_01.smp  SciFi_01.smp  SciFi_02.smp  SciFi_03.smp  SciFi_04.smp  SciFi_05.smp  Sharp_01.smp
resources/: shellModNode_Apply.txt  shellModNode_CCLogo.txt  shellModNode_Minus.txt  shellModNode_Plus.txt  shellModNode_Preset.txt  shellModNode_Refresh.txt  shellModNode_Trash.txt
src/: AETemplate.h  DagUtils.cpp  ShellModCommand.cpp  ShellModCommand.h  ShellModNode.cpp  ShellModNode.h  pluginMain.cpp
